--- a/requirements.txt
+++ b/requirements.txt
@@ -43,8 +43,10 @@ nbconvert==5.6.1
 nbformat==5.0.7
 nibabel==3.1.1
 nose==1.3.7
+numpy==1.18.5
 openpyxl==3.0.5
 packaging==20.4
+pandas==0.25.3
 pandocfilters==1.4.2
 parso==0.7.1
 pbr==5.4.5
@@ -53,21 +55,6 @@ Pillow==7.1.2
 prometheus-client==0.8.0
 prompt-toolkit==3.0.3
 psycopg2==2.8.5
-py==1.8.2
-pycparser==2.20
-pydot==1.4.1
-pydotplus==2.0.2
-Pygments==2.6.1
-PyMuPDF==1.17.6
-pyparsing==2.4.7
-pyrsistent==0.16.0
-pytesseract==0.3.6
-pytest==3.2.1
-python-dateutil==2.6.1
-pytz==2020.1
-pywinpty==0.5.7
-pyxnat==1.3
-pyzmq==19.0.2
 qtconsole==4.7.6
 QtPy==1.9.0
 regex==2020.6.8
