--- a/requirements.txt
+++ b/requirements.txt
@@ -24,25 +24,40 @@ djangorestframework==3.6.4
 djangotoolbox==1.8.0
 entrypoints==0.3
 et-xmlfile==1.0.1
+face-recognition==1.3.0
+face-recognition-models==0.3.0
 future==0.16.0
 gunicorn==20.0.4
 httplib2==0.18.1
 idna==2.5
 importlib-metadata==1.7.0
 ipykernel==5.3.4
+ipython==7.16.1
+ipython-genutils==0.2.0
+ipywidgets==7.5.1
 jdcal==1.4.1
 jedi==0.17.2
 Jinja2==2.11.2
+joblib==1.0.1
+json5==0.9.5
+jsondiff==1.1.1
+jsonschema==3.2.0
+jupyter==1.0.0
+jupyter-client==6.1.7
+jupyter-console==6.2.0
+jupyter-core==4.6.3
+jupyterlab==2.2.6
+jupyterlab-server==1.2.0
 kiwisolver==1.2.0
 lxml==4.5.2
 MarkupSafe==1.1.1
-matplotlib==3.2.1
 mistune==0.8.4
 mysqlclient==1.4.6
 nbconvert==5.6.1
 nbformat==5.0.7
 nibabel==3.1.1
 nose==1.3.7
+notebook==6.1.3
 numpy==1.18.5
 openpyxl==3.0.5
 packaging==20.4
@@ -50,16 +65,34 @@ pandas==0.25.3
 pandocfilters==1.4.2
 parso==0.7.1
 pbr==5.4.5
+phonenumbers==8.12.20
 pickleshare==0.7.5
 Pillow==7.1.2
 prometheus-client==0.8.0
 prompt-toolkit==3.0.3
 psycopg2==2.8.5
+py==1.8.2
+pycparser==2.20
+pydot==1.4.1
+pydotplus==2.0.2
+Pygments==2.6.1
+PyMuPDF==1.17.6
+pyparsing==2.4.7
+pyrsistent==0.16.0
+pytesseract==0.3.6
+pytest==3.2.1
+python-dateutil==2.6.1
+pytz==2020.1
+pywebio==1.2.3
+pywin32==228
+pywinpty==0.5.7
+pyxnat==1.3
+PyYAML==5.3.1
+pyzmq==19.0.2
+qrcode==6.1
 qtconsole==4.7.6
 QtPy==1.9.0
-regex==2020.6.8
 requests==2.19.1
-scipy==1.5.2
 Send2Trash==1.5.0
 simplejson==3.17.2
 six==1.15.0
@@ -68,16 +101,15 @@ sqlparse==0.3.1
 stevedore==2.0.0
 terminado==0.8.3
 testpath==0.4.4
+threadpoolctl==2.1.0
 tornado==6.0.4
+tqdm==4.51.0
 traitlets==4.3.2
 ua-parser==0.10.0
 unittest-tap-reporting==0.2
 unittest-xml-reporting==2.1.0
 urllib3==1.21.1
 user-agents==2.1
-virtualenv==15.1.0
-virtualenv-clone==0.2.6
-virtualenvwrapper==4.7.2
 wcwidth==0.2.5
 webencodings==0.5.1
 whitenoise==5.1.0
